add news authors functionality.
